# ai-youtube-knowledge-summarizer

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
ai_youtube_knowledge_summarizer/: main.py
ai_youtube_knowledge_summarizer/api/: routes.py  schemas.py
ai_youtube_knowledge_summarizer/core/: config.py  exceptions.py  logging.py
ai_youtube_knowledge_summarizer/docs/: architecture.md
ai_youtube_knowledge_summarizer/models/: domain.py
ai_youtube_knowledge_summarizer/scripts/: run_local_pipeline.py
ai_youtube_knowledge_summarizer/services/: chunker.py  downloader.py  qa_service.py  summarizer.py  transcriber.py  vector_store.py
ai_youtube_knowledge_summarizer/tests/: test_api.py  test_chunker.py  test_config.py  test_downloader.py  test_qa_service.py  test_summarizer.py  test_transcriber.py  test_vector_store.py
ai_youtube_knowledge_summarizer/ui/: streamlit_app.py
