[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-youtube-knowledge-summarizer"
version = "1.0.1"
description = "Production-style AI SaaS application for YouTube transcription, summarization, vector search, and retrieval QA."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Valentin Sheboldaev" }
]

keywords = [
    "ai",
    "llm",
    "rag",
    "langchain",
    "openai",
    "whisper",
    "vector-database",
    "fastapi",
    "streamlit",
    "machine-learning",
    "retrieval-augmented-generation",
    "generative-ai",
    "backend-engineering",
    "python",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.46.0",

    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",

    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.2.0",

    "openai>=1.93.0",
    "chromadb>=1.0.0",

    "openai-whisper>=20250625",

    "yt-dlp>=2025.6.30",

    "requests>=2.32.0",

    "python-json-logger>=3.2.0",

    "tenacity>=9.1.0",

    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "pytest-mock>=3.14.0",

    "black>=25.1.0",
    "ruff>=0.12.0",
    "mypy>=1.16.0",

    "types-requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/w-e-ll/ai-youtube-knowledge-summarizer"
Repository = "https://github.com/w-e-ll/ai-youtube-knowledge-summarizer"
Issues = "https://github.com/w-e-ll/ai-youtube-knowledge-summarizer/issues"

[tool.setuptools.packages.find]
include = ["ai_youtube_knowledge_summarizer*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

ignore = [
    "B008",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-vv"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.coverage.run]
source = ["ai_youtube_knowledge_summarizer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
